core_directory/tests/fixtures/invalid_no_sig/invalid_license_reference.core
CAPI=2:
name: vendor:lib:core:1.0.0
description: "Another valid core with custom license."
license: "LicenseRef-NOT_ALLOWED"
provider:
  name: github
  user: myuser
  repo: myrepo
  version: "release-2024-09"